--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel --no-cache ./src/js/*.js --out-dir ./src/"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,14 @@
   },
   "homepage": "https://github.com/x3pi/Rain#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "glslify-deps": "^1.3.1",
     "parcel-bundler": "^1.10.3"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.1.5",
+    "gsap": "^2.0.2"
   }
 }
